force-app/main/default/objects/Product__c/fields/BackImage__c.field-meta.xml
<CustomField>
    <fullName>BackImage__c</fullName>
    <formula>IMAGE(&apos;/resource/MINTIA_Back&apos;, &quot;MINTIA_Back&quot;, 250, 800)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Back Image</label>
    <type>Text</type>
</CustomField>