force-app/main/default/objects/Product__c/fields/BarcodeImage__c.field-meta.xml
<CustomField>
    <fullName>BarcodeImage__c</fullName>
    <formula>IMAGE(&apos;/resource/MINTIA_Barcord&apos;, &quot;MINTIA_Barcord&quot;, 200, 800)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Barcode Image</label>
    <type>Text</type>
</CustomField>