force-app/main/default/objects/Product__c/fields/BarcodeNumber__c.field-meta.xml
<CustomField>
    <fullName>BarcodeNumber__c</fullName>
    <label>Barcode Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>