force-app/main/default/objects/Product__c/fields/BrandName__c.field-meta.xml
<CustomField>
    <fullName>BrandName__c</fullName>
    <label>Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>