force-app/main/default/objects/Product__c/fields/ChangeRequestDetails__c.field-meta.xml
<CustomField>
    <fullName>ChangeRequestDetails__c</fullName>
    <label>Change Request Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>