force-app/main/default/objects/Product__c/fields/CheckCertificate__c.field-meta.xml
<CustomField>
    <fullName>CheckCertificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Certificate</label>
    <type>Checkbox</type>
</CustomField>