force-app/main/default/objects/Product__c/fields/DropReason__c.field-meta.xml
<CustomField>
    <fullName>DropReason__c</fullName>
    <label>Drop Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>