force-app/main/default/objects/Product__c/fields/FrontImage__c.field-meta.xml
<CustomField>
    <fullName>FrontImage__c</fullName>
    <formula>IMAGE(&apos;/resource/MINTIA_Front&apos;, &quot;MINTIA_Front&quot;, 250, 800)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Front Image</label>
    <type>Text</type>
</CustomField>