force-app/main/default/objects/Product__c/fields/IndicationImage__c.field-meta.xml
<CustomField>
    <fullName>IndicationImage__c</fullName>
    <formula>IMAGE(&apos;/resource/MINTIA_Indication&apos;, &quot;MINTIA_Indication&quot;, 250, 800)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indication Image</label>
    <type>Text</type>
</CustomField>