force-app/main/default/objects/Product__c/fields/OrderUnit__c.field-meta.xml
<CustomField>
    <fullName>OrderUnit__c</fullName>
    <label>Order Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>