force-app/main/default/objects/Product__c/fields/Orgin__c.field-meta.xml
<CustomField>
    <fullName>Orgin__c</fullName>
    <label>Orgin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>