force-app/main/default/objects/Product__c/fields/ParentProduct__c.field-meta.xml
<CustomField>
    <fullName>ParentProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>Product1</relationshipName>
    <type>Lookup</type>
</CustomField>