force-app/main/default/objects/Product__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <displayFormat>P{00000}</displayFormat>
    <label>Product Code</label>
    <type>AutoNumber</type>
</CustomField>