force-app/main/default/objects/Product__c/fields/ProductGroupLevel1__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupLevel1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Group Level1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ProductGroup__c.ProductLevel__c</field>
            <operation>equals</operation>
            <value>GroupLevel1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProductGroup__c</referenceTo>
    <relationshipName>ProductGroupLevel1</relationshipName>
    <type>Lookup</type>
</CustomField>