force-app/main/default/objects/Product__c/fields/ProductNameEng__c.field-meta.xml
<CustomField>
    <fullName>ProductNameEng__c</fullName>
    <label>Product Name(Eng)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>