force-app/main/default/objects/Product__c/fields/ProductNumber__c.field-meta.xml
<CustomField>
    <fullName>ProductNumber__c</fullName>
    <label>Product Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>