force-app/main/default/objects/Product__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <label>일반상품</label>
            </value>
            <value>
                <fullName>Refrigerated</fullName>
                <label>냉장상품</label>
            </value>
            <value>
                <fullName>Frozen</fullName>
                <label>냉동상품</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>