force-app/main/default/objects/Product__c/fields/PurchaseEndDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseEndDate__c</fullName>
    <defaultValue>NULL</defaultValue>
    <label>Purchase End Date</label>
    <type>Date</type>
</CustomField>