force-app/main/default/objects/Product__c/fields/PurchaseLimit__c.field-meta.xml
<CustomField>
    <fullName>PurchaseLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Limit</label>
    <type>Checkbox</type>
</CustomField>