force-app/main/default/objects/Product__c/fields/PurchaseLimitDateTime__c.field-meta.xml
<CustomField>
    <fullName>PurchaseLimitDateTime__c</fullName>
    <label>Purchase Limit DateTime</label>
    <type>DateTime</type>
</CustomField>