force-app/main/default/objects/Product__c/fields/PurchaseLimitReason__c.field-meta.xml
<CustomField>
    <fullName>PurchaseLimitReason__c</fullName>
    <label>Purchase Limit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>없음</label>
            </value>
            <value>
                <fullName>Discontinued</fullName>
                <label>단종</label>
            </value>
            <value>
                <fullName>Suspended</fullName>
                <label>일시중단</label>
            </value>
            <value>
                <fullName>Stock Out</fullName>
                <label>재고부족</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <label>기타</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>