force-app/main/default/objects/Product__c/fields/PurchaseLower__c.field-meta.xml
<CustomField>
    <fullName>PurchaseLower__c</fullName>
    <label>Purchase Lower</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>