force-app/main/default/objects/Product__c/fields/PurchaseStartDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseStartDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Purchase Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>