force-app/main/default/objects/Product__c/fields/ReturnLimit__c.field-meta.xml
<CustomField>
    <fullName>ReturnLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Limit</label>
    <type>Checkbox</type>
</CustomField>