force-app/main/default/objects/Product__c/fields/SalesUnit__c.field-meta.xml
<CustomField>
    <fullName>SalesUnit__c</fullName>
    <label>Sales Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>