force-app/main/default/objects/Product__c/fields/SourcingGroupLevel1__c.field-meta.xml
<CustomField>
    <fullName>SourcingGroupLevel1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Group Level1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SourcingGroup__c.SourcingGroupLevel__c</field>
            <operation>equals</operation>
            <value>GroupLevel1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SourcingGroup__c</referenceTo>
    <relationshipName>ProductwaFQ</relationshipName>
    <type>Lookup</type>
</CustomField>