force-app/main/default/objects/Product__c/fields/SourcingGroupLevel3__c.field-meta.xml
<CustomField>
    <fullName>SourcingGroupLevel3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Group Level3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SourcingGroup__c.SourcingGroupLevel__c</field>
            <operation>equals</operation>
            <value>GroupLevel3</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>SourcingGroup__c</referenceTo>
    <relationshipName>ProductwaG4</relationshipName>
    <type>Lookup</type>
</CustomField>