force-app/main/default/objects/Product__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <label>Standard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>