force-app/main/default/objects/Product__c/fields/StandardUnit__c.field-meta.xml
<CustomField>
    <fullName>StandardUnit__c</fullName>
    <label>Standard Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kg</fullName>
                <label>kg</label>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>BOX</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>