force-app/main/default/objects/Product__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RegistrationRequest</fullName>
                <label>Registration Request</label>
            </value>
            <value>
                <fullName>EvaluationRequest</fullName>
                <label>Evaluation Request</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>ChangeRequest</fullName>
                <label>Change Request</label>
            </value>
            <value>
                <fullName>EvaluationCompleted</fullName>
                <label>Evaluation Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>