force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProductCode__c</columns>
    <columns>Orderable__c</columns>
    <columns>ProductGroupLevel1__c</columns>
    <columns>ProductGroupLevel2__c</columns>
    <columns>ProductGroupLevel3__c</columns>
    <columns>ProductGroupLevel4__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>ProductNameEng__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>